--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "webpack": "^1.13.3"
+  },
+  "dependencies": {
+    "hoek": "^5.0.3"
   }
 }
